feat: port `setup` command from influxdb
