# internal/api/model_inline_response_200.go
@@ -1,0 +1,114 @@
+/*
+ * Subset of Influx API covered by Influx CLI
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 2.0.0
+ */
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package api
+
+import (
+	"encoding/json"
+)
+
+// InlineResponse200 struct for InlineResponse200
+type InlineResponse200 struct {
+	// True means that the influxdb instance has NOT had initial setup; false means that the database has been setup.
+	Allowed *bool `json:"allowed,omitempty"`
+}
+
+// NewInlineResponse200 instantiates a new InlineResponse200 object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewInlineResponse200() *InlineResponse200 {
+	this := InlineResponse200{}
+	return &this
+}
+
+// NewInlineResponse200WithDefaults instantiates a new InlineResponse200 object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewInlineResponse200WithDefaults() *InlineResponse200 {
+	this := InlineResponse200{}
+	return &this
+}
+
+// GetAllowed returns the Allowed field value if set, zero value otherwise.
+func (o *InlineResponse200) GetAllowed() bool {
+	if o == nil || o.Allowed == nil {
+		var ret bool
+		return ret
+	}
+	return *o.Allowed
+}
+
+// GetAllowedOk returns a tuple with the Allowed field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *InlineResponse200) GetAllowedOk() (*bool, bool) {
+	if o == nil || o.Allowed == nil {
+		return nil, false
+	}
+	return o.Allowed, true
+}
+
+// HasAllowed returns a boolean if a field has been set.
+func (o *InlineResponse200) HasAllowed() bool {
+	if o != nil && o.Allowed != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetAllowed gets a reference to the given bool and assigns it to the Allowed field.
+func (o *InlineResponse200) SetAllowed(v bool) {
+	o.Allowed = &v
+}
+
+func (o InlineResponse200) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if o.Allowed != nil {
+		toSerialize["allowed"] = o.Allowed
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableInlineResponse200 struct {
+	value *InlineResponse200
+	isSet bool
+}
+
+func (v NullableInlineResponse200) Get() *InlineResponse200 {
+	return v.value
+}
+
+func (v *NullableInlineResponse200) Set(val *InlineResponse200) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableInlineResponse200) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableInlineResponse200) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableInlineResponse200(val *InlineResponse200) *NullableInlineResponse200 {
+	return &NullableInlineResponse200{value: val, isSet: true}
+}
+
+func (v NullableInlineResponse200) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableInlineResponse200) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
