# internal/api/model_user_response.go
@@ -1,0 +1,255 @@
+/*
+ * Subset of Influx API covered by Influx CLI
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 2.0.0
+ */
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package api
+
+import (
+	"encoding/json"
+)
+
+// UserResponse struct for UserResponse
+type UserResponse struct {
+	Id      *string `json:"id,omitempty"`
+	OauthID *string `json:"oauthID,omitempty"`
+	Name    string  `json:"name"`
+	// If inactive the user is inactive.
+	Status *string            `json:"status,omitempty"`
+	Links  *UserResponseLinks `json:"links,omitempty"`
+}
+
+// NewUserResponse instantiates a new UserResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewUserResponse(name string) *UserResponse {
+	this := UserResponse{}
+	this.Name = name
+	var status string = "active"
+	this.Status = &status
+	return &this
+}
+
+// NewUserResponseWithDefaults instantiates a new UserResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewUserResponseWithDefaults() *UserResponse {
+	this := UserResponse{}
+	var status string = "active"
+	this.Status = &status
+	return &this
+}
+
+// GetId returns the Id field value if set, zero value otherwise.
+func (o *UserResponse) GetId() string {
+	if o == nil || o.Id == nil {
+		var ret string
+		return ret
+	}
+	return *o.Id
+}
+
+// GetIdOk returns a tuple with the Id field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *UserResponse) GetIdOk() (*string, bool) {
+	if o == nil || o.Id == nil {
+		return nil, false
+	}
+	return o.Id, true
+}
+
+// HasId returns a boolean if a field has been set.
+func (o *UserResponse) HasId() bool {
+	if o != nil && o.Id != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetId gets a reference to the given string and assigns it to the Id field.
+func (o *UserResponse) SetId(v string) {
+	o.Id = &v
+}
+
+// GetOauthID returns the OauthID field value if set, zero value otherwise.
+func (o *UserResponse) GetOauthID() string {
+	if o == nil || o.OauthID == nil {
+		var ret string
+		return ret
+	}
+	return *o.OauthID
+}
+
+// GetOauthIDOk returns a tuple with the OauthID field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *UserResponse) GetOauthIDOk() (*string, bool) {
+	if o == nil || o.OauthID == nil {
+		return nil, false
+	}
+	return o.OauthID, true
+}
+
+// HasOauthID returns a boolean if a field has been set.
+func (o *UserResponse) HasOauthID() bool {
+	if o != nil && o.OauthID != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetOauthID gets a reference to the given string and assigns it to the OauthID field.
+func (o *UserResponse) SetOauthID(v string) {
+	o.OauthID = &v
+}
+
+// GetName returns the Name field value
+func (o *UserResponse) GetName() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value
+// and a boolean to check if the value has been set.
+func (o *UserResponse) GetNameOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Name, true
+}
+
+// SetName sets field value
+func (o *UserResponse) SetName(v string) {
+	o.Name = v
+}
+
+// GetStatus returns the Status field value if set, zero value otherwise.
+func (o *UserResponse) GetStatus() string {
+	if o == nil || o.Status == nil {
+		var ret string
+		return ret
+	}
+	return *o.Status
+}
+
+// GetStatusOk returns a tuple with the Status field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *UserResponse) GetStatusOk() (*string, bool) {
+	if o == nil || o.Status == nil {
+		return nil, false
+	}
+	return o.Status, true
+}
+
+// HasStatus returns a boolean if a field has been set.
+func (o *UserResponse) HasStatus() bool {
+	if o != nil && o.Status != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetStatus gets a reference to the given string and assigns it to the Status field.
+func (o *UserResponse) SetStatus(v string) {
+	o.Status = &v
+}
+
+// GetLinks returns the Links field value if set, zero value otherwise.
+func (o *UserResponse) GetLinks() UserResponseLinks {
+	if o == nil || o.Links == nil {
+		var ret UserResponseLinks
+		return ret
+	}
+	return *o.Links
+}
+
+// GetLinksOk returns a tuple with the Links field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *UserResponse) GetLinksOk() (*UserResponseLinks, bool) {
+	if o == nil || o.Links == nil {
+		return nil, false
+	}
+	return o.Links, true
+}
+
+// HasLinks returns a boolean if a field has been set.
+func (o *UserResponse) HasLinks() bool {
+	if o != nil && o.Links != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetLinks gets a reference to the given UserResponseLinks and assigns it to the Links field.
+func (o *UserResponse) SetLinks(v UserResponseLinks) {
+	o.Links = &v
+}
+
+func (o UserResponse) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if o.Id != nil {
+		toSerialize["id"] = o.Id
+	}
+	if o.OauthID != nil {
+		toSerialize["oauthID"] = o.OauthID
+	}
+	if true {
+		toSerialize["name"] = o.Name
+	}
+	if o.Status != nil {
+		toSerialize["status"] = o.Status
+	}
+	if o.Links != nil {
+		toSerialize["links"] = o.Links
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableUserResponse struct {
+	value *UserResponse
+	isSet bool
+}
+
+func (v NullableUserResponse) Get() *UserResponse {
+	return v.value
+}
+
+func (v *NullableUserResponse) Set(val *UserResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableUserResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableUserResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableUserResponse(val *UserResponse) *NullableUserResponse {
+	return &NullableUserResponse{value: val, isSet: true}
+}
+
+func (v NullableUserResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableUserResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
